# MCA_Routing_BSCAP

./: .gitignore  CreateGraphs.ipynb  README.md  RunAll.py  compile_packages.py  pyproject.toml  requirements.txt  seed_numbers.txt
Results_Multi_N100/daisy_chain_large_2000_1-5_0/: Node3.csv  instantaneous_pdr.csv  mobility_stats.pkl
Results_Multi_N100/daisy_chain_large_2000_1-5_1/: Flow_Node0-Node5.csv  instantaneous_pdr.csv  transmit_Node1.parquet
Results_Multi_N100/daisy_chain_large_2000_2-0_0/: compile_res.out
Results_Multi_N100/daisy_chain_large_2000_2-0_1/: Flow_Node0-Node5.csv  Node0.csv  all_stats.csv  compile_res.out  run.out  transmit_Node0.parquet  transmit_Node1.parquet
Results_Multi_N100/daisy_chain_large_2000_4-0_0/: all_stats.csv  timeout_stats.csv
Results_Multi_N100/daisy_chain_large_2000_4-0_1/: Node1.csv  instantaneous_pdr.csv  mobility_stats.pkl
Results_Multi_N100/daisy_chain_large_2000_8-0_0/: Node0.csv  Node1.csv  Node2.csv
Results_Multi_N100/daisy_chain_large_2400_1-5_0/: Flow_Node0-Node5.csv  Node0.csv  Node1.csv  Node2.csv  all_stats.csv  compile_res.out  run.out  timeout_stats.csv  transmit_Node0.parquet  transmit_Node1.parquet  transmit_Node2.parquet  transmit_Node3.parquet
Results_Multi_N100/daisy_chain_large_2400_1-5_1/: Node0.csv  Node1.csv  (+10 more)
src/: CompileResults.py  ComplieResults.py  RouteFunctions.py  TransportLayer.py  ether.py  load_config.py  mac.py  macPacket.py  main.py  node.py  parameters.py  phero_c.pyi  phero_c.pyx  phy.py  phyPacket.py  run_multi.py  run_multi_cross.py  run_multi_daisy.py  setup.py  stats.py
(+979 files in other folders)
